added AI chatbot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql: true
 server.port=8080
 spring.main.allow-circular-references=true
 spring.jpa.open-in-view=false
+
+deepseek.api.url=https://api.deepseek.com
+deepseek.api.key=sk-3bf539fd8e6843c98150428018230a61
+deepseek.model=deepseek-chat
+
